--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,7 +24,7 @@ security:
             logout:
                 path: app_logout
                 # where to redirect after logout
-                # target: app_any_route
+                # target: app_any_route  // la route ou l'utilisateur peut allez  une fois deconnecter
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
